--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	
 	<meta charset="utf-8">
 	<title>АвтоМотоКлуб</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
+	<meta name="description" content="У нас вы узнаете о реставрации ретро-автомобилей, различных выставках и мероприятиях, интересных авто проектах, известных коллекционерах и реставраторах.">
 	<meta name="author" content="">
 	
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="https://carmoto.club/favicon.ico">
     
 	<!-- CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
