--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-ss-12 margbot30">
 							<a class="services_item" href="javascript:void(0);" >
-								<p><b>Ford-M1</b>Чёрный Ворон</p>
-								<span>Если бы я не боялся своего редактора, то начал бы сейчас рассказ про этот автомобиль с эпитетов «легендарный» и «культовый». Но шеф эти шаблоны вполне справедливо презирает, поэтому я их произносить не буду. Хотя именно эту машину они описывают особенно точно. Но нет, рисковать не стоит, могу получить по шее. И даже не стану вспоминать, что этот автомобиль и есть тот самый зловещий «чёрный воронок», в котором в своё время советские граждане частенько уезжали на десять лет без права переписки. Потому что это тоже шаблонно и банально. Давайте лучше подойдём к этой машине с другой стороны – со стороны техники. </span>
+								<p><b>Ford-M1</b></p>
+								<span>Если бы я не боялся своего редактора, то начал бы сейчас рассказ про этот автомобиль с эпитетов «легендарный» и «культовый». Но шеф эти шаблоны вполне справедливо презирает, поэтому я их произносить не буду. Хотя именно эту машину они описывают особенно точно. Но нет, рисковать не стоит, могу получить по шее. Давайте лучше подойдём к этой машине с другой стороны – со стороны техники. </span>
 							</a>
 						</div>
 						<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-ss-12 margbot30">
